--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,8 +15,12 @@ h1 {
   margin: 10px 0;
 }
 
+.field-group {
+  margin: 10px 0;
+}
+
 .field-label {
-  width: 150px; /* 고정된 라벨 폭 */
+  width: 150px;
   text-align: right;
   margin-right: 10px;
   font-weight: bold;
@@ -25,12 +29,48 @@ h1 {
 .field-input,
 select,
 input {
-  width: 300px; /* 고정된 입력창 폭 */
+  width: 300px;
   padding: 8px;
   font-size: 16px;
   border-radius: 4px;
   border: 1px solid #ccc;
   box-sizing: border-box;
+}
+
+.multi-field {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.multi-field-row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.add-button,
+.remove-button {
+  background-color: #28a745;
+  color: white;
+  border: none;
+  cursor: pointer;
+  padding: 5px 10px;
+  margin: 5px 0 0 160px;
+  border-radius: 4px;
+}
+
+.remove-button {
+  background-color: #dc3545;
+  margin-left: 10px;
+}
+
+.add-button:hover {
+  background-color: #218838;
+}
+
+.remove-button:hover {
+  background-color: #c82333;
 }
 
 button {
